apogeo-exercises/Cap 13/nodejs-mongo-kubernetes/mongo-statefulset.yaml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "mongo"
spec:
  serviceName: "mongo"
  replicas: 3
  selector:
    matchLabels:
      app: "mongo"
  template:
    metadata:
      labels:
        app: "mongo"
    spec:
      containers:
        - name: "mongo"
          image: "mongo"
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--noprealloc"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: "dbdata"
              mountPath: "/data/db"
      volumes:
        - name: "dbdata"
          persistentVolumeClaim:
            claimName: "dbdata"
