apogeo-exercises/Cap 13/nodejs-mongo-kubernetes/frontend-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 4200
      targetPort: 4200
  type: LoadBalancer
